--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 body {
   font-family: 'Comfortaa', cursive;
   background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, #e0f7fa 100%);
-  background-image: url('https://www.transparenttextures.com/patterns/cubes.png');
+  background-image: src="celestia-nuvem.png";
   background-repeat: repeat;
   color: #333;
 }
