--- a/styles.css
+++ b/styles.css
@@ -68,8 +68,12 @@ textarea::placeholder {
   width: 100%;
   color: #EEE8AA;
   text-align: center;
-  padding: 1rem 0;
+  padding: 0.5rem 0;
   z-index: 100;
+  background: rgba(255, 255, 255, 0.12);  /* branco translúcido */
+  border-radius: 20px;
+  backdrop-filter: blur(8px) saturate(160%);
+  box-shadow: 0 0 12px rgba(0,0,0,.5);
 }
 
 /* Evita que o conteúdo fique escondido atrás do footer */
