--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body{
   font-family:'Cinzel Decorative',cursive;
-  background:url('celestia-nuvem.png') no-repeat center/cover fixed;
+  background:url('celestia-nuvem.webp') no-repeat center/cover fixed;
   color:#d185a2;
 }
 .brand-color{color:#FFDAB9;}
